Search - Only resources with reviews check box text is misaligned : Fixed.

--- a/src/main/java/org/ednovo/gooru/client/mvp/search/res_search2style.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/search/res_search2style.css
@@ -107,7 +107,9 @@ html {
 }
 
 .oerContainer {
-	
+	position: relative;
+	margin-bottom: 0px;
+	height: 30px;
 }
 
 .filtersInner {
@@ -260,7 +262,9 @@ html {
 }
 
 .mobilefriendlyContainer {
-	
+	position: relative;
+	margin-bottom: 0px;
+	height: 30px;
 }
 
 .form-control {
